Mac: Honour the user preference for triggering QuickLook with Force Click

Chrome maps force click to Quick Look in the content area since r368481
but a user preference should override that.

Dumping out +[NSUserDefaults standardUserDefaults] after toggling the
setting in the Touchpad System Preferences pane reveals that this info
is stored in "com.apple.trackpad.forceClick". Obey.

BUG=602382

Review URL: https://codereview.chromium.org/1888343002

Cr-Commit-Position: refs/heads/master@{#387838}

Former-commit-id: fbc03c43bcc3d9635d9203685538231c11eec5b8